syntax = "proto3";

package booksync;

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  string format = 4;
  bytes content = 5;
}

message UploadBookRequest {
  Book book = 1;
}

message UploadBookResponse {
  string status = 1;
}

message GetBookRequest {
  string id = 1;
}

message GetBookResponse {
  Book book = 1;
}

service BookSync {
  rpc UploadBook(UploadBookRequest) returns (UploadBookResponse);
  rpc GetBook(GetBookRequest) returns (GetBookResponse);
}
